Fixed bug in overflow from display

--- a/index.css
+++ b/index.css
@@ -2,8 +2,7 @@
     font-family:Arial, Helvetica, sans-serif;
     background-color: rgba(0, 0, 0, 0.80);
     border-radius: 20px;
-    /* width: 480px; */
-    max-width: 500px;
+    width: 500px;
     overflow: hidden;
 
 }
@@ -23,6 +22,9 @@ body{
     align-items: center;
     height: 100vh;
 
+}
+#display{
+    width: 460px;
 }
 #keys{
     display: grid;
